--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@angular/platform-browser-dynamic": "9.0.4",
     "@angular/router": "9.0.4",
     "@fullcalendar/core": "^4.4.0",
+    "@types/axios": "^0.14.0",
     "@types/jasmine": "3.3.16",
     "@types/jasminewd2": "2.0.8",
     "chart.js": "2.9.3",
