--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@types/jasmine": "3.3.16",
     "@types/jasminewd2": "2.0.8",
     "chart.js": "2.9.3",
-    "primeflex": "1.1.0",
-    "primeicons": "2.0.0",
+    "primeflex": "^1.1.0",
+    "primeicons": "^2.0.0",
     "primeng": "9.1.0",
     "quill": "1.3.7",
     "rxjs": "6.5.4",
