--- a/angular.json
+++ b/angular.json
@@ -60,6 +60,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
+            "sslKey": "localhost.key",
+            "sslCert": "localhost.crt",
             "browserTarget": "primeng-issue-template:build"
           },
           "configurations": {
