--- a/angular.json
+++ b/angular.json
@@ -60,7 +60,9 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-
+            "ssl": true,
+            "sslKey": "localhost.key",
+            "sslCert": "localhost.crt",
             "browserTarget": "primeng-issue-template:build"
           },
           "configurations": {
