--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
+    "dev": "lite-server --baseDir=\"dist/browser\"",
     "e2e": "ng e2e",
     "build:server:prod": "ng run primeng-issue-template:server && webpack --config webpack.server.config.js --progress --colors",
     "build:browser:prod": "ng build --prod",
@@ -71,6 +72,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "lite-server": "^2.6.1",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
