--- a/angular.json
+++ b/angular.json
@@ -61,8 +61,8 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "ssl": true,
-            "sslKey": "localhost.key",
-            "sslCert": "localhost.crt",
+            "sslKey": "src/assets/localhost.key",
+            "sslCert": "src/assets/localhost.crt",
             "browserTarget": "primeng-issue-template:build"
           },
           "configurations": {
