--- a/angular.json
+++ b/angular.json
@@ -60,7 +60,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "ssl": true,
+            "ssl": false,
             "sslKey": "src/assets/localhost.key",
             "sslCert": "src/assets/localhost.crt",
             "browserTarget": "primeng-issue-template:build"
