--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.12",
-    "@angular/cdk": "^9.2.4",
-    "@angular/common": "9.0.4",
-    "@angular/compiler": "9.0.4",
-    "@angular/core": "9.0.4",
-    "@angular/forms": "9.0.4",
+    "@angular/animations": "^11.1.1",
+    "@angular/cdk": "^11.1.1",
+    "@angular/common": "11.1.1",
+    "@angular/compiler": "11.1.1",
+    "@angular/core": "11.1.1",
+    "@angular/forms": "11.1.1",
     "@angular/http": "7.2.16",
-    "@angular/localize": "^9.1.12",
-    "@angular/platform-browser": "9.0.4",
-    "@angular/platform-browser-dynamic": "9.0.4",
-    "@angular/platform-server": "^9.1.12",
-    "@angular/router": "9.0.4",
-    "@fullcalendar/core": "^4.4.0",
-    "@ng-toolkit/universal": "^1.1.51",
-    "@nguniversal/common": "^7.1.1",
-    "@nguniversal/express-engine": "~7.0.0",
+    "@angular/localize": "^11.1.1",
+    "@angular/platform-browser": "11.1.1",
+    "@angular/platform-browser-dynamic": "11.1.1",
+    "@angular/platform-server": "^11.1.1",
+    "@angular/router": "11.1.1",
+    "@fullcalendar/core": "^5.5.1",
+    "@ng-toolkit/universal": "^8.1.0",
+    "@nguniversal/common": "^11.1.0",
+    "@nguniversal/express-engine": "~11.1.0",
     "@nguniversal/module-map-ngfactory-loader": "^7.1.1",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
@@ -26,22 +26,22 @@
     "@types/jasmine": "3.3.16",
     "@types/jasminewd2": "2.0.8",
     "alasql": "^0.6.5",
-    "chart.js": "2.9.3",
-    "cors": "~2.8.4",
+    "chart.js": "2.9.4",
+    "cors": "~2.8.5",
     "file-saver": "^2.0.5",
     "fs": "0.0.1-security",
     "moment": "^2.29.1",
     "primeflex": "2.0.0",
     "primeicons": "4.1.0",
-    "primeng": "^11.1.0-rc.1",
+    "primeng": "^11.2.0",
     "quill": "1.3.7",
-    "rxjs": "^6.5.4",
-    "ts-loader": "4.2.0",
-    "tslib": "1.11.1",
+    "rxjs": "^6.6.3",
+    "ts-loader": "8.0.14",
+    "tslib": "2.1.0",
     "web-animations-js": "2.3.2",
-    "webpack-cli": "^3.1.2",
+    "webpack-cli": "^4.4.0",
     "xlsx": "^0.16.9",
-    "zone.js": "0.10.2"
+    "zone.js": "0.11.3"
   },
   "scripts": {
     "ng": "ng",
@@ -57,25 +57,25 @@
     "server": "node local.js"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.12",
-    "@angular/cli": "^9.1.12",
-    "@angular/compiler-cli": "~9.1.1",
-    "@angular/language-service": "~9.1.1",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^8.10.66",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.4.1",
+    "@angular-devkit/build-angular": "^0.1101.1",
+    "@angular/cli": "^11.1.1",
+    "@angular/compiler-cli": "~11.1.1",
+    "@angular/language-service": "~11.1.1",
+    "@types/jasmine": "~3.6.3",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "^14.14.22",
+    "codelyzer": "^6.0.1",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~6.0.0",
+    "karma": "~6.0.3",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~3.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "lite-server": "^2.6.1",
-    "protractor": "~5.4.3",
-    "ts-node": "~8.3.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~9.1.1",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "typescript": "~4.1.3"
   }
 }
