--- a/angular.json
+++ b/angular.json
@@ -60,6 +60,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
+            "disableHostCheck": true,
             "ssl": true,
             "sslKey": "src/assets/localhost.key",
             "sslCert": "src/assets/localhost.crt",
