--- a/angular.json
+++ b/angular.json
@@ -61,7 +61,7 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "disableHostCheck": true,
-            "ssl": true,
+            "ssl": false,
             "sslKey": "src/assets/localhost.key",
             "sslCert": "src/assets/localhost.crt",
             "browserTarget": "primeng-issue-template:build"
